<resources>
    <string name="app_name">PlantApplication</string>
    <string name="get_started_legal">By tapping next, you are agreeing to PlantID Terms of Use &amp; Privacy Policy.</string>
    <string name="get_started_content_title">Welcome to <b>PlantApp</b></string>
    <string name="get_started_content_subtext">Identify more than 3000+ plants and 88% accuracy.</string>
    <string name="get_started">Get Started</string>
    <string name="take_a_photo_to_identify_the_plant">Take a photo to <b>identify</b> the plant!</string>
    <string name="get_plant_care_guides">Get plant <b>care guides</b></string>
    <string name="home">Home</string>
    <string name="diagnose">Diagnose</string>
    <string name="my_garden">My Garden</string>
    <string name="profile">Profile</string>
    <string name="plant_app_premium"><b>PlantApp</b> Premium</string>
    <string name="access_all_features">Access All Features</string>
    <string name="unlimited">Unlimited</string>
    <string name="plant_identify">Plant identify</string>
    <string name="faster">Faster</string>
    <string name="process">Process</string>
    <string name="one_month">1 Month</string>
    <string name="one_month_price">$2.99/month, auto renewable</string>
    <string name="one_year">1 Year</string>
    <string name="one_year_price">First 3 days free, then $529,99/year</string>
    <string name="save_fifty_percent">Save 50%</string>
    <string name="after_three_day_free_trial">After the 3-day free trial period you’ll be charged ₺274.99 per year unless you cancel before the trial expires. Yearly Subscription is Auto-Renewable</string>
    <string name="terms_privacy_restore">Terms  •  Privacy  •  Restore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_afternoon">Good Afternoon! ⛅</string>
    <string name="free_premium_available"><b>FREE</b> Premium Available</string>
    <string name="tap_to_upgrade_your_account">Tap to upgrade your account!</string>
    <string name="hi_plant_lover">Hi, plant lover!</string>
</resources>