<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".get_started.view.GetStartedFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/get_started_content_title"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        style="@style/GetStartedTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/get_started_content_subtext"
        style="@style/GetStartedSubText" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:importantForAccessibility="no"
        android:src="@drawable/get_started_plant_frame"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:importantForAccessibility="no"
        android:src="@drawable/get_started_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/get_started_legal"
        style="@style/GetStartedLegalText" />

</LinearLayout>