<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/get_started_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".onboarding.GetStartedFragment">


    <TextView
        android:id="@+id/hello_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        style="@style/DashboardTextStyle"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:text="@string/hi_plant_lover"/>


    <TextView
        android:id="@+id/good_afternoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hello_message"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/DashboardTextStyle"
        android:textSize="24sp"
        android:layout_marginStart="24dp"
        android:text="@string/good_afternoon"/>
    
    <com.example.plantapplication.ui.CustomSearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/good_afternoon"
        app:layout_constraintStart_toStartOf="parent"
        app:header_image="@drawable/search_icon"
        app:hint="Search" />
    
    <androidx.cardview.widget.CardView
        android:id="@+id/premium_card"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@color/black"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_premium_button_available_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/premium_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/premium_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/premium_header"
                app:layout_constraintEnd_toStartOf="@id/premium_footer"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/premium_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_premium_available"
                    android:textColor="@color/premium_title_color"/>

                <TextView
                    android:id="@+id/premium_subtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/premium_subtext_color"
                    android:text="@string/tap_to_upgrade_your_account"/>

            </LinearLayout>



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/premium_footer"
                android:src="@drawable/premium_footer"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/get_started_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        style="@style/DashboardTextStyle"
        android:textSize="15sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/premium_card"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="12dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/questionsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/get_started_title"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/dashboard_get_start_card"
        android:orientation="horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/questionsRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
        android:layout_marginTop="10dp"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/categories_item" />


    <com.example.plantapplication.ui.CustomBottomNavBar
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>